--- a/css/admin.css
+++ b/css/admin.css
@@ -1,3 +1,21 @@
+a{
+	color:brown;
+}
+*{
+	font-family: Veranda, Arial, sans-serif;
+}
+body{
+	background-color: #1c298b;
+}
+#baseHeadline{
+	text-align: center;
+	color: white;
+}
+#baseHeadline h1{
+	font-weight: normal;
+	margin: 0px 0px 5px 0px;
+	font-size: 42px;
+}
 .addNewPage{
 	color: silver;
 	font-size: 12px;
@@ -11,24 +29,108 @@
 }
 .button{
 	display: inline-block;
-	background-color: silver;
-	text-align: center;
-	padding: 3px 6px;
-	margin: 0px 2px;
-	border: 1px solid black;
-	border-radius: 5px;
+	width: 35px;
+	height: 35px;
+	background-size: 35px 35px;
+	cursor: pointer;
+	background-color: transparent;
 	outline: none;
-	color: black;
-	font-size: 0.85em;
-	text-decoration: none;
-	font-family: Sans-serif;
+	border: none;
+	margin: 0px 3px;
 }
+.button_wrapper{
+	display: inline-block;
+	position: absolute;
+	height: 0px;
+	width: 20px;
+	overflow: hidden;
+	padding-top: 20px;
+	background-size: 20px 20px;
+	background-image: url('../images/buttons/rozbalit_menu.png');
+	background-repeat: no-repeat;
+	margin: 6px 0px 0px 15px;
+}
+.button_wrapper:hover{
+	height: auto;
+	z-index: 200;
+	width: 180px;
+}
+.button_wrapper .button {
+	display: block;
+	width: 180px;
+	background-repeat: no-repeat;
+	text-align: left;
+	font-size: 15px;
+	background-size: 20px 20px;
+	background-position: left center;
+	padding: 7px 0px 7px 28px !important;
+	height: auto;
+}
+.button_wrapper .button:hover {
+	background-color: red;
+}
+.pridat{
+	margin: 0px;
+	text-indent: -9999px;
+	width: 15px;
+	height: 15px;
+	background-size: 15px 15px;
+	display: block;
+	background-image: url('../images/buttons/pridat.png');
+}
+.posunNahoru{
+	text-indent: -9999px;
+	display: inline-block;
+	background-image: url('../images/buttons/nahoru.png');
+}
+.posunDolu{
+	text-indent: -9999px;
+	display: inline-block;
+	background-image: url('../images/buttons/dolu.png');
+}
+.smazat{
+	display: inline-block;
+	background-image: url('../images/buttons/smazat.png');
+}
+.upravitObsah{
+	display: inline-block;
+	background-image: url('../images/buttons/upravit_obsah.png');
+}
+.upravit{
+	display: inline-block;
+	background-image: url('../images/buttons/upravit.png');
+}
+.skryt{
+	display: inline-block;
+	background-image: url('../images/buttons/skryt.png');
+}
+.odkryt{
+	display: inline-block;
+	background-image: url('../images/buttons/odkryt.png');
+}
+
+.skryto{
+	color: #838383;
+}
+
 #content{
-	margin-left: 180px;
+	color: white;
+	margin: 0px 30px 0px 30px
+}
+#content h1{
+	font-weight: normal;
+	position: relative;
+	left: -20px;
 }
 #form_wrapper{
 	width: 550px;
-	margin: 0px auto;
+	position: relative;
+	left: -180px;
+	margin: 0px auto;	
+	background-color: white;
+	border-radius: 5px;
+	border: 2px solid gray;
+	padding: 10px;
 }
 #form_wrapper .form_input input{
 	width: 100%;
@@ -52,17 +154,55 @@
 	min-height: 550px;
 	font-size: 0.80em;
 }
-
 #navigation{
-	position: absolute;
-	top: 150px;
-	left: 0px;
+	background-color: white;
+	border-radius: 5px;
+	margin: 5px 20px;
+	text-align: center;
 }
+#navigation a{
+	text-decoration: none;
+	color: #1c298b;
+}
+#navigation li{
+	display: inline-block;
+	margin: 0px 10px;
+	font-size: 17px;
+	padding: 3px 0px;
+	width: 95px;
+	text-align: center;
+	color: #1c298b;
+	cursor: pointer;
+}
+#navigation li:hover{
+	background-color: #d2d7ff;	
+}
+#navigation li ul li{
+	display: none;
+	position: absolute;
+	margin: 0px;
+}
+#navigation li ul li a{
+	position: relative;
+	left: -40px;
+	width: 95px;
+	display: block;
+	background-color: white;
+}
+#navigation li:hover ul li{
+	display: block;
+	background-color: transparent;	
+}
+#navigation li ul li:hover a{
+	display: block;
+	background-color: #d2d7ff;	
+}
+
 .footerBlock{
 	width: 548px;
 	border: 1px dashed black;
 	padding: 10px;
-	margin: 15px 0px;
+	margin: 15px auto;
 }
 
 .obsah_type_wrapper{
